--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,19 @@ button {
 .footer a {
   color: hotpink;
 }
+
+.education_page {
+  color: white;
+}
+
+.creativity_page {
+  color: white;
+}
+
+.spirituality_page {
+  color: white;
+}
+
+.lgbt_page {
+  color: white;
+}
