--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,11 @@
 .App {
   text-align: center;
   background-image: url("images/jake-weirick-Q_RBVFFXR_g-unsplash.jpg");
-  height: 550px;
+  height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -32,7 +33,6 @@ button {
 }
 
 .footer {
-  position: absolute;
   left: 450px;
   bottom: 25px;
   font-size: 10px;
@@ -54,9 +54,17 @@ li {
   left: 40%;
 }
 
+.start_page_buttons {
+  height: 390px;
+}
+
 .education_page p {
   width: 50%;
   position: relative;
   left: 25%;
 
+}
+
+h2 {
+  color: white;
 }
