--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@ h1 {
   color: darkorchid;
 }
 
+h2 {
+  color: darkorchid;
+}
+
 .intro {
   color: white;
 }
@@ -39,7 +43,7 @@ button {
   color: white;
 }
 
-.footer a {
+a {
   color: hotpink;
 }
 
@@ -58,6 +62,18 @@ li {
   height: 390px;
 }
 
+.creativity_pages {
+  height: 390px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: 30%;
+}
+
+
 .education_page p {
   width: 50%;
   position: relative;
@@ -65,6 +81,3 @@ li {
 
 }
 
-h2 {
-  color: white;
-}
